--- a/VeloTours/Views/Segment/Index.cshtml
+++ b/VeloTours/Views/Segment/Index.cshtml
@@ -1,34 +1,68 @@
-﻿@model IEnumerable<VeloTours.Models.Country>
+﻿@model VeloTours.Models.SegmentViewModel
 @using VeloTours.Models;
 
 @{
-    ViewBag.Title = "Segment Area Overview";
-    int athleteID = ViewBag.Athlete ?? 0;
+    ViewBag.Title = "Segment";
+    int segmentID = @Model.SegmentID;
+    int athleteID = ViewBag.Athlete;
+    int areaID = ViewBag.Area;
 }
 
-<h2>Segment Area Overview</h2>
-@foreach (Country country in Model)
-{
-    <h3>@country.Name</h3>   
-    
-    <a href="@Url.Action("Update from Strava", "CountryUpdate", new { athlete = athleteID, country = country.CountryID, })">
-        <i class='icon-refresh'></i>
-    </a>
-    
-    foreach (Region region in country.Regions)
-    {
-    <h4>
-        @Html.ActionLink(region.Name, "/Region", new { region = region.RegionID, athlete = athleteID })
-    </h4>
+<h2>@Model.Name</h2>
+<p>@Model.Description</p>
 
-    <a href="@Url.Action("Update from Strava", "RegionUpdate", new { athlete = athleteID, region = region.RegionID, })">
-        <i class='icon-refresh'></i>
-    </a>
-        
-        foreach (SegmentArea area in region.SegmentAreas)
+<h3>Segments in the areas</h3>
+@*tablesorter*@
+<table id="SegmentsTable" class="hidden-phone table-striped table-bordered table-condensed" style="table-layout: fixed; overflow: hidden;">
+    <thead>
+        <tr>
+            <th class="right" title="Your position on the segment; the last time you updated.">pos</th>
+            <th class="right" title="Your placing's percentile position of the total number of riders.">pos %</th>
+            @*<th style="vertical-align:top">Name</th>*@
+            <th class="right" title="Distance, measured in kilometers">dist<br />km.</th>
+            <th class="right" title="Elevation difference">elev<br />gain</th>
+            <th class="right">grade<br />%</th>
+            <th class="right" title="Grade category. This influence the Yersey calculations.">grade<br />cat</th>
+            <th class="right" title="Total number of riders that have completed this segment">riders</th>
+            <th class="right" title="Total number the segments has been ridden">ridden</th>
+            <th class="right" title="Speed on segment, ridden by KOM">KOM<br />km/h</th>
+            <th class="right" title="Your time on the segment">time</th>
+            <th class="right" title="The time your personal best is currently behind the current KOM.">behind<br />KOM s.</th>
+            <th class="right" title="Percentage of time your personal best is currently behind the current KOM.">behind<br />KOM %</th>
+            <th class="right" title="Position change on the leaderboard">change</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td class="right">@Model.UsersPosition</td>
+            <td class="right">@Model.UsersPositionPercentage</td>
+            @*<th style="vertical-align:top">Name</th>*@
+            <td class="right">@String.Format("{0:#0.##}", @Model.Distance / 1000)</td>
+            <td class="right">@Math.Round(Model.ElevationGain ?? 0)</td>
+            <td class="right">@String.Format("{0:#0.#}", Model.AvgGrade)</td>
+            <td class="right">@Model.GradeType</td>
+            <td class="right">@Model.NoRidden</td>
+            <td class="right">@Model.NoRiders</td>
+            <td class="right">@Model.KomSpeed</td>
+            <td class="right">@Model.UsersTime<br />@Model.UsersTimePrevious</td>
+            <td class="right">@Model.BehindKom</td>
+            <td class="right">@Model.BehindKomPercentage</td>
+            <td class="right">@Model.UsersChangePos</td>
+        </tr>
+    </tbody>
+</table>
+
+<h2>Strava Segments for @Model.Name</h2>
+
+<iframe seamless="seamless" height="370" src="http://app.strava.com/segments/@segmentID/embed" width="450"></iframe>
+
+<p>
+    @Html.ActionLink("Update from Strava", "Update", routeValues: new { athlete = @athleteID, area = @areaID, segment = @segmentID, effort = false, }, htmlAttributes: null)<br />
+    @Html.ActionLink("Update from Strava w/efforts", "Update", routeValues: new { athlete = athleteID, area = @areaID, segment = @segmentID, effort = true, }, htmlAttributes: null)<br />
+    @{
+        if( areaID > 0)
         {
-    @Html.ActionLink(area.Name, "/Area", new { area = area.SegmentAreaID, athlete = ViewBag.Athlete })
-    @Html.DisplayText(",&nbsp;");
+            @Html.ActionLink("Go back to area", "Index", "Area", new { area = areaID, athlete = athleteID })
         }
     }
-}
+</p>
