--- a/VeloTours/Views/Segment/Index.cshtml
+++ b/VeloTours/Views/Segment/Index.cshtml
@@ -12,64 +12,13 @@
 <h2>@Model.Segment.Name</h2>
 <p>@Model.Segment.Description</p>
 
-<h2>Segment info</h2>
-@RenderPage("~/Views/Segment/YerseyPart.cshtml", ViewData.Model);
+<h3>Yersey</h3>
+@RenderPage("~/Views/Segment/YerseyPart.cshtml", ViewData.Model)
 
-<h3>Segment info</h3>
-@*tablesorter*@
-<table id="SegmentsTable" class="hidden-phone table-striped table-bordered table-condensed" style="table-layout: fixed; overflow: hidden;">
-    <thead>
-        <tr>
-            <th class="right" title="Your position on the segment; the last time you updated.">pos</th>
-            <th class="right" title="Your placing's percentile position of the total number of riders.">pos %</th>
-            @*<th style="vertical-align:top">Name</th>*@
-            <th class="right" title="Distance, measured in kilometers">dist<br />km.</th>
-            <th class="right" title="Elevation difference">elev<br />gain</th>
-            <th class="right">grade<br />%</th>
-            <th class="right" title="Grade category. This influence the Yersey calculations.">grade<br />cat</th>
-            <th class="right" title="Total number of riders that have completed this segment">riders</th>
-            <th class="right" title="Total number the segments has been ridden">ridden<br />total</th>
-            <th class="right" title="Speed on segment, ridden by KOM">KOM<br />km/h</th>
-            <th class="right" title="The time your personal best is currently behind the current KOM.">behind<br />KOM s.</th>
-            <th class="right" title="Percentage of time your personal best is currently behind the current KOM.">behind<br />KOM %</th>
-            <th class="right" title="Total number the segments has been ridden by uou">ridden<br />you</th>
-            <th class="right" title="Your minimum time on the segment">time<br />min</th>
-            <th class="right" title="Your percentil-90 time on the segment">time<br />p-90</th>
-            <th class="right" title="Your max on the segment">time<br />max</th>
-            <th class="right" title="Your median on the segment">time<br />med</th>
-            <th class="right" title="Your average on the segment">time<br />avg</th>
-            <th class="right" title="Your standard deviation on the segment">time<br />stdev</th>
-            <th class="right" title="Position change on the leaderboard">change</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td class="right">@Model.Athlete.Position</td>
-            <td class="right">@String.Format("{0:#0.#}", @Model.Athlete.PositionPercentage)</td>
-            @*<th style="vertical-align:top">Name</th>*@
-            <td class="right">@String.Format("{0:#0.##}", @Model.Segment.Distance / 1000)</td>
-            <td class="right">@Math.Round(Model.Segment.ElevationGain ?? 0)</td>
-            <td class="right">@String.Format("{0:#0.#}", Model.Segment.AvgGrade)</td>
-            <td class="right">@Model.Segment.GradeType</td>
-            <td class="right">@Model.Segment.NoRidden</td>
-            <td class="right">@Model.Segment.NoRiders</td>
-            <td class="right">@String.Format("{0:#0.##}", Model.KomSpeed)</td>
-            <td class="right">@Model.Athlete.BehindKom</td>
-            <td class="right">@String.Format("{0:#0.##}", Model.Athlete.BehindKomPercentage)</td>
-            <td class="right">@Model.Athlete.NoRidden</td>
-            <td class="right">@Model.Athlete.ElapsedTimes.Min<br />@Model.Athlete.UsersTimePrevious</td>
-            <td class="right">@Model.Athlete.ElapsedTimes.Percentile90</td>
-            <td class="right">@Model.Athlete.ElapsedTimes.Max</td>
-            <td class="right">@Model.Athlete.ElapsedTimes.Median</td>
-            <td class="right">@Model.Athlete.ElapsedTimes.Average</td>
-            <td class="right">@String.Format("{0:#}", @Model.Athlete.ElapsedTimes.Stdev)</td>
-            <td class="right">@Model.Athlete.UsersChangePos</td>
-        </tr>
-    </tbody>
-</table>
+<h3>Table</h3>
+@RenderPage("~/Views/Segment/Table.cshtml", ViewData.Model)
 
-<h2>Strava Segments for @Model.Segment.Name</h2>
-
+<h3>Strava Segments for @Model.Segment.Name</h3>
 <iframe seamless="seamless" height="370" src="http://app.strava.com/segments/@segmentID/embed" width="450"></iframe>
 
 <p>
