--- a/VeloTours/Views/Area/Index.cshtml
+++ b/VeloTours/Views/Area/Index.cshtml
@@ -8,23 +8,21 @@
     int areaID = @Model.SegmentArea.SegmentAreaID;
     int athleteID = ViewBag.Athlete ?? 0;
 
-    VeloTours.Models.SegmentArea main = @Model.SegmentArea;
-    
+    string title = @Model.SegmentArea.Info.Name;
 }
 
-<h2>Resultboard for @main.Name</h2>
-
-<p>@Model.Description</p>
+<h2>Resultboard for @title</h2>
+<p>@Model.SegmentArea.Info.Description</p>
 
 <h3>Segments in the areas</h3>
 @*tablesorter*@
 <table id="SegmentsTable" class="hidden-phone table-striped table-bordered table-condensed" style="table-layout: fixed; overflow: hidden;">
     <thead>
         <tr>
-            <th class="right" title="Your position on the segment; the last time you updated.">pos</th>
-            <th class="right" title="Your placing's percentile position of the total number of riders.">pos %</th>
+@*            <th class="right" title="Your position on the segment; the last time you updated.">pos</th>
+            <th class="right" title="Your placing's percentile position of the total number of riders.">pos %</th>*@
             <th style="vertical-align:top">Name</th>
-            <th class="right" title="Distance, measured in kilometers">dist<br />km.</th>
+@*            <th class="right" title="Distance, measured in kilometers">dist<br />km.</th>
             <th class="right" title="Elevation difference">elev<br />gain</th>
             <th class="right">grade<br />%</th>
             <th class="right" title="Grade category. This influence the Yersey calculations.">grade<br />cat</th>
@@ -34,22 +32,22 @@
             <th class="right" title="Your time on the segment">time</th>
             <th class="right" title="The time your personal best is currently behind the current KOM.">behind<br />KOM s.</th>
             <th class="right" title="Percentage of time your personal best is currently behind the current KOM.">behind<br />KOM %</th>
-            <th class="right" title="Position change on the leaderboard">change</th>
+            <th class="right" title="Position change on the leaderboard">change</th>*@
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model.Segments)
         {
             <tr>
-                <td class="right">@item.UsersPosition</td>
-                <td class="right">@item.UsersPositionPercentage</td>
+@*                <td class="right">@item.UsersPosition</td>
+                <td class="right">@item.UsersPositionPercentage</td>*@
                 <td>
-                    @Html.ActionLink(item.Name, "Index", "Segment", new { segment = item.SegmentID, athlete = athleteID, area = @areaID }, null)
+                    @Html.ActionLink(item.Name, "Index", "Segment", new { segment = item.Segment.SegmentID, athlete = @athleteID, area = @areaID }, null)
 
                     @Html.Raw(String.Format("<a id='segment{0}' data-effortid='{1}' data-segmentid='{0}' data-komid='{2}' class='segmentLink' href='#' rel='popover' data-original-title=''><i class='icon-info-sign'></i></a>",
-                        item.SegmentID, 0, 0))
+                        item.Segment.SegmentID, 0, 0))
                 </td>
-                <td class="right">@String.Format("{0:#0.##}", @item.Distance / 1000)</td>
+@*                <td class="right">@String.Format("{0:#0.##}", @item.Distance / 1000)</td>
                 <td class="right">@Math.Round(item.ElevationGain ?? 0)</td>
                 <td class="right">@String.Format("{0:#0.#}", item.AvgGrade)</td>
                 <td class="right">@item.GradeType</td>
@@ -59,14 +57,14 @@
                 <td class="right">@item.UsersTime<br />@item.UsersTimePrevious</td>
                 <td class="right">@item.BehindKom</td>
                 <td class="right">@item.BehindKomPercentage</td>
-                <td class="right">@item.UsersChangePos</td>
+                <td class="right">@item.UsersChangePos</td>*@
             </tr>
         }
         <tr>
-            <td class="right">@Model.UsersPosition</td>
-            <td class="right">&nbsp;</td>
+@*            <td class="right">@Model.UsersPosition</td>
+            <td class="right">&nbsp;</td>*@
             <td>SUM</td>
-            <td class="right">@String.Format("{0:#0.##}", @Model.Distance / 1000)</td>
+@*            <td class="right">@String.Format("{0:#0.##}", @Model.Distance / 1000)</td>
             <td class="right">@Math.Round(@Model.ElevationGain ?? 0)</td>
             <td class="right">@String.Format("{0:#0.#}", @Model.AvgGrade)</td>
             <td class="right">-</td>
@@ -75,17 +73,17 @@
             <td class="right">@Model.UsersTime<br />@Model.UsersTimePrevious</td>
             <td class="right">@Model.BehindKom</td>
             <td class="right">@Model.BehindKomPercentage</td>
-            <td class="right">@Model.UsersChangePos</td>
+            <td class="right">@Model.UsersChangePos</td>*@
         </tr>
     </tbody>
 </table>
 
 
-<h2>Strava Segments for @Model.Name</h2>
+<h2>Strava Segments for @title</h2>
 
 @foreach (var item in Model.Segments)
 {
-    <iframe seamless="seamless" height="370" src="http://app.strava.com/segments/@item.SegmentID/embed" width="450"></iframe>
+    <iframe seamless="seamless" height="370" src="http://app.strava.com/segments/@item.Segment.SegmentID/embed" width="450"></iframe>
 }
 
 <p>
