--- a/VeloTours/Views/Segment/Index.cshtml
+++ b/VeloTours/Views/Segment/Index.cshtml
@@ -6,19 +6,23 @@
     int segmentID = @Model.Segment.SegmentID;
     int athleteID = ViewBag.Athlete;
     int areaID = ViewBag.Area;
-    
+
+    string title = @Model.Segment.Info.Name;
 }
 
-<h2>@Model.Segment.Name</h2>
-<p>@Model.Segment.Description</p>
+<h2>@title</h2>
+<p>@Model.Segment.Info.Description</p>
 
 <h3>Yersey</h3>
 @RenderPage("~/Views/Segment/YerseyPart.cshtml", ViewData.Model)
 
 <h3>Table</h3>
-@RenderPage("~/Views/Segment/Table.cshtml", ViewData.Model)
+@RenderPage("~/Views/Segment/TablePart.cshtml", ViewData.Model)
 
-<h3>Strava Segments for @Model.Segment.Name</h3>
+<h3>Table</h3>
+@RenderPage("~/Views/Segment/LeaderboardPart.cshtml", ViewData.Model)
+
+<h3>Strava Segments for @title</h3>
 <iframe seamless="seamless" height="370" src="http://app.strava.com/segments/@segmentID/embed" width="450"></iframe>
 
 <p>
