--- a/VeloTours/Views/Segment/TablePart.cshtml
+++ b/VeloTours/Views/Segment/TablePart.cshtml
@@ -1,4 +1,12 @@
-﻿@*tablesorter*@
+﻿@using VeloTours.Models;
+@{
+    Statistics info = @Model.Info;
+    AthleteRideInfo athleteInfo = @Model.Athlete;
+}
+
+@*Hide things with CSS (area/segment)*@
+
+@*tablesorter*@
 <table id="SegmentsTable" class="hidden-phone table-striped table-bordered table-condensed" style="table-layout: fixed; overflow: hidden;">
     <thead>
         <tr>
@@ -26,26 +34,26 @@
     </thead>
     <tbody>
         <tr>
-            <td class="right">@Model.Athlete.Position</td>
-            <td class="right">@String.Format("{0:#0.#}", @Model.Athlete.PositionPercentage )</td>
+            <td class="right">@athleteInfo.Position</td>
+            <td class="right">@String.Format("{0:#0.#}", @athleteInfo.PositionPercentage )</td>
             @*<th style="vertical-align:top">Name</th>*@
-            <td class="right">@String.Format("{0:#0.##}", @Model.Segment.Distance / 1000)</td>
-            <td class="right">@Math.Round(Model.Segment.ElevationGain ?? 0)</td>
-            <td class="right">@String.Format("{0:#0.#}", Model.Segment.AvgGrade)</td>
-            <td class="right">@Model.Segment.GradeType</td>
-            <td class="right">@Model.Segment.NoRidden</td>
-            <td class="right">@Model.Segment.NoRiders</td>
+            <td class="right">@String.Format("{0:#0.##}", @info.Distance / 1000)</td>
+            <td class="right">@Math.Round(info.ElevationGain ?? 0)</td>
+            <td class="right">@String.Format("{0:#0.#}", info.AvgGrade)</td>
+            <td class="right">@info.ClimbCategory</td>
+            <td class="right">@info.NoRidden</td>
+            <td class="right">@info.NoRiders</td>
             <td class="right">@String.Format("{0:#0.##}", Model.KomSpeed)</td>
-            <td class="right">@Model.Athlete.BehindKom</td>
-            <td class="right">@String.Format("{0:#0.##}", Model.Athlete.BehindKomPercentage)</td>
-            <td class="right">@Model.Athlete.NoRidden</td>
-            <td class="right">@Model.Athlete.ElapsedTimes.Min<br />@Model.Athlete.UsersTimePrevious</td>
-            <td class="right">@Model.Athlete.ElapsedTimes.Percentile90</td>
-            <td class="right">@Model.Athlete.ElapsedTimes.Max</td>
-            <td class="right">@Model.Athlete.ElapsedTimes.Median</td>
-            <td class="right">@Model.Athlete.ElapsedTimes.Average</td>
-            <td class="right">@String.Format("{0:#}", @Model.Athlete.ElapsedTimes.Stdev)</td>
-            <td class="right">@Model.Athlete.UsersChangePos</td>
+            <td class="right">@athleteInfo.BehindKom</td>
+            <td class="right">@String.Format("{0:#0.##}", athleteInfo.BehindKomPercentage)</td>
+            <td class="right">@athleteInfo.NoRidden</td>
+            <td class="right">@athleteInfo.ElapsedTimes.Min<br />@athleteInfo.UsersTimePrevious</td>
+            <td class="right">@athleteInfo.ElapsedTimes.Percentile90</td>
+            <td class="right">@athleteInfo.ElapsedTimes.Max</td>
+            <td class="right">@athleteInfo.ElapsedTimes.Median</td>
+            <td class="right">@athleteInfo.ElapsedTimes.Average</td>
+            <td class="right">@String.Format("{0:#}", @athleteInfo.ElapsedTimes.Stdev)</td>
+            <td class="right">@athleteInfo.UsersChangePos</td>
         </tr>
     </tbody>
 </table>
