--- a/VeloTours/Views/Area/Index.cshtml
+++ b/VeloTours/Views/Area/Index.cshtml
@@ -42,7 +42,7 @@
 @*                <td class="right">@item.UsersPosition</td>
                 <td class="right">@item.UsersPositionPercentage</td>*@
                 <td>
-                    @Html.ActionLink(item.Name, "Index", "Segment", new { segment = item.Segment.SegmentID, athlete = @athleteID, area = @areaID }, null)
+                    @Html.ActionLink(item.Info.Name, "Index", "Segment", new { athlete = @athleteID, segment = item.Segment.SegmentID, area = @areaID }, htmlAttributes: null )
 
                     @Html.Raw(String.Format("<a id='segment{0}' data-effortid='{1}' data-segmentid='{0}' data-komid='{2}' class='segmentLink' href='#' rel='popover' data-original-title=''><i class='icon-info-sign'></i></a>",
                         item.Segment.SegmentID, 0, 0))
@@ -89,7 +89,7 @@
 <p>
     @Html.ActionLink("Update from Strava", "Update", routeValues: new { athlete = athleteID, area = areaID, effort = false })<br />
     @Html.ActionLink("Update from Strava w/efforts", "Update", routeValues: new { athlete = athleteID, area = areaID, effort = true, }, htmlAttributes: null)<br />
-    @Html.ActionLink("Go back to overview", "Index", "Home", new { athlete = athleteID })
+    @Html.ActionLink("Go back to overview", "Index", "Home", new { athlete = athleteID }, htmlAttributes: null)
 </p>
 
 
