--- a/VeloTours/Views/Country/Index.cshtml
+++ b/VeloTours/Views/Country/Index.cshtml
@@ -18,12 +18,12 @@
     {
         <h4>
             <a href="@Url.Action("UpdateRegion", new { athlete = athleteID, region = region.RegionID, })" style='vertical-align:middle;'><i class='icon-refresh'></i></a>
-            @Html.ActionLink(region.Name, "Index", "Region", new { region = region.RegionID, athlete = athleteID } , null)
+            @Html.ActionLink(region.Info.Name, "Index", "Region", new { athlete = athleteID, region = region.RegionID }, htmlAttributes: null)
         </h4>
         
         foreach (SegmentArea area in region.SegmentAreas)
         {
-            @Html.ActionLink(area.Name, "Index", "Area", new { area = area.SegmentAreaID, athlete = ViewBag.Athlete }, null)
+            @Html.ActionLink(area.Info.Name, "Index", "Area", new { athlete = athleteID, area = area.SegmentAreaID }, htmlAttributes: null)
             @Html.DisplayText(",&nbsp;");
         }
     }
