--- a/VeloTours/Views/Segment/Index.cshtml
+++ b/VeloTours/Views/Segment/Index.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Segment";
     int segmentID = @Model.Segment.SegmentID;
     int athleteID = ViewBag.Athlete;
-    int areaID = ViewBag.Area;
+    int? areaID = ViewBag.Area;
 
     string title = @Model.Segment.Info.Name;
 }
@@ -19,8 +19,9 @@
 <h3>Table</h3>
 @RenderPage("~/Views/Segment/TablePart.cshtml", ViewData.Model)
 
-<h3>Table</h3>
-@RenderPage("~/Views/Segment/LeaderboardPart.cshtml", ViewData.Model)
+@if (ViewData.Model.LeaderBoard != null && ViewData.Model.LeaderBoard.Count > 0) {
+    @RenderPage("~/Views/Segment/LeaderboardPart.cshtml", ViewData.Model);
+}
 
 <h3>Strava Segments for @title</h3>
 <iframe seamless="seamless" height="370" src="http://app.strava.com/segments/@segmentID/embed" width="450"></iframe>
