--- a/VeloTours/Views/Segment/TablePart.cshtml
+++ b/VeloTours/Views/Segment/TablePart.cshtml
@@ -43,7 +43,7 @@
             <td class="right">@info.ClimbCategory</td>
             <td class="right">@info.NoRidden</td>
             <td class="right">@info.NoRiders</td>
-            <td class="right">@String.Format("{0:#0.##}", Model.KomSpeed)</td>
+            <td class="right">@String.Format("{0:#0.##}", Model.KomSpeed ?? 0)</td>
             <td class="right">@athleteInfo.BehindKom</td>
             <td class="right">@String.Format("{0:#0.##}", athleteInfo.BehindKomPercentage)</td>
             <td class="right">@athleteInfo.NoRidden</td>
