--- a/VeloTours/Views/Segment/LeaderboardPart.cshtml
+++ b/VeloTours/Views/Segment/LeaderboardPart.cshtml
@@ -14,7 +14,7 @@
 }
 
 @*tablesorter*@
-<table id="SegmentsTable" class="hidden-phone table-striped table-bordered table-condensed" style="table-layout: fixed; overflow: hidden;">
+<table class="hidden-phone table-striped table-bordered table-condensed" style="table-layout: fixed; overflow: hidden;">
     <thead>
         <tr>
             <th class="right" title="Rank">rank</th>
