Improved navigation and yersey

--- a/VeloTours/Views/Area/YerseyPart.cshtml
+++ b/VeloTours/Views/Area/YerseyPart.cshtml
@@ -2,7 +2,9 @@
 @using VeloTours.Models;
 
 @{
-    //var yellow = @Model.Segment.Result.LeaderBoards.First();
+    var yellow = @Model.YellowYersey;
+    var green = @Model.YellowYersey;
+    var polkadot = @Model.YellowYersey;
 }
 
 <table>
